Fix focus outline overlapping with text in preview toggle
Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559255&signed_aid=3U5tBrDAx3fETmI2O_BeLA==&inline=1&thumb=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559255&signed_aid=3U5tBrDAx3fETmI2O_BeLA==&inline=1

Bug: 1337702

--- a/front_end/ui/components/panel_feedback/previewToggle.css
+++ b/front_end/ui/components/panel_feedback/previewToggle.css
@@ -37,6 +37,9 @@
   color: var(--color-primary);
   text-decoration-line: underline;
   padding: 4px;
+  /* For outline not to paint over the other elements
+  we need to have 2 * <padding>px additional line height */
+  line-height: calc(1em + 8px);
 }
 
 .feedback .x-link {
